--- a/main.html
+++ b/main.html
@@ -8,6 +8,78 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h3 style="text-align:center">HTML Assignment #3</h3>
+	<table border="1" width="100%" height="100%">
+		<tr>
+			<td style="text-align:left">left</td>
+			<td style="text-align:center">center</td>
+			<td style="text-align:right">right</td>
+		</tr>
+		<tr>
+			<td style="text-align:left">left</td>
+			<td style="text-align:center">center</td>
+			<td style="text-align:right">right</td>
+		</tr>
+		<tr>
+			<td style="text-align:left">left</td>
+			<td style="text-align:center">center</td>
+			<td style="text-align:right">right</td>
+		</tr>
+	</table>
+	<br>
+
+
+	
+
+	<table border="1px solid black; Spacing: 1px; padding:1px" width="100%" height="100%">
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan="2"></td>
+			<td rowspan="2"></td>
+			<td rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+	<br>
+
+	<table border="1" width="100%" height="100%">
+		<tr>
+			<td style="background-color:green" colspan="3"></td>
+		</tr
+		<tr>
+			<td style="width:50%"></td>
+			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td  style="width:50%"></td>
+		</tr>
+		<tr>
+			<td style="background-color:blue" colspan="3"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
