--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h3 style="text-align:center">HTML Assignment #3</h3>
-	<table border="1" width="100%" height="100%">
+	<table border="1" width="100%" height="100%" id="table-1">
 		<tr>
-			<td style="text-align:left">left</td>
-			<td style="text-align:center">center</td>
-			<td style="text-align:right">right</td>
+			<td style="text-align:left" id="t11">left</td>
+			<td style="text-align:center" id="t12">center</td>
+			<td style="text-align:right" id="t13">right</td>
 		</tr>
 		<tr>
 			<td style="text-align:left">left</td>
@@ -31,9 +31,9 @@
 
 	
 
-	<table border="1px solid black; Spacing: 1px; padding:1px" width="100%" height="100%">
+	<table border="1px solid black; Spacing: 1px; padding:1px" width="100%" height="100%" id="table-2">
 		<tr>
-			<td colspan="6"></td>
+			<td colspan="6" id="t21"></td>
 		</tr>
 		<tr>
 			<td rowspan="4"></td>
@@ -69,11 +69,11 @@
 
 	<table border="1" width="100%" height="100%">
 		<tr>
-			<td style="background-color:green" colspan="3"></td>
+			<td style="background-color:green" colspan="3" id="table-3"></td>
 		</tr
 		<tr>
 			<td style="width:50%"></td>
-			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" id="t-image"></td>
 			<td  style="width:50%"></td>
 		</tr>
 		<tr>
